[package]
name          = "simple-logging"
description   = "A simple logger for the log facade"
documentation = "https://docs.rs/simple-logging"
readme        = "README.md"
keywords      = ["simple", "log", "logger", "logging"]
categories    = ["rust-patterns", "text-processing", "value-formatting"]
repository    = "https://github.com/Ereski/simple-logging"
license       = "BSD-3-Clause"
version       = "2.0.2"
authors       = ["Carol Schulze <carol@ereski.org>"]

[badges]
appveyor  = {repository = "Ereski/simple-logging"}
travis-ci = {repository = "Ereski/simple-logging"}

[dependencies]
lazy_static = "1"
log = "0.4"
thread-id = "3"

[dev-dependencies]
regex = "1"
